src/2.27/README.md
| No  | Heap Technique                                                                              |
| :-- | :------------------------------------------------------------------------------------------ |
| 1   | [unsorted_bin_leak](./unsorted_bin_leak/exploit.py)                                         |
| 2   | [unsorted_bin_leak_again](./unsorted_bin_leak_again/exploit.py)                             |
| 3   | [unsafe_unlink](./unsafe_unlink/exploit.py)                                                 |
| 4   | [unsafe_unlink_again](./unsafe_unlink_again/exploit.py)                                     |
| 5   | [fast_bin_attack](./fast_bin_attack/exploit.py)                                             |
| 6   | [unsorted_bin_attack](./unsorted_bin_attack/exploit.py)                                     |
| 7   | [unsorted_bin_attack_again](./unsorted_bin_attack_again/exploit.py)                         |
| 8   | [unsorted_bin_attack_bss](./unsorted_bin_attack_bss/exploit.py)                             |
| 9   | [fast_bin_attack_bss](./fast_bin_attack_bss/exploit.py)                                     |
| 10  | [tcache_poisoning](./tcache_poisoning/exploit.py)                                           |
| 11  | [tcache_poisoning_again](./tcache_poisoning_again/exploit.py)                               |
| 12  | [tcache_metadata_poisoning](./tcache_metadata_poisoning/exploit.py)                         |
| 13  | [tcache_stashing_unlink_attack](./tcache_stashing_unlink_attack/exploit.py)                 |
| 14  | [tcache_house_of_spirit](./tcache_house_of_spirit/exploit.py)                               |
| 15  | [fast_bin_reverse_into_tcache](./fast_bin_reverse_into_tcache/exploit.py)                   |
| 16  | [fast_bin_reverse_into_tcache_again](./fast_bin_reverse_into_tcache_again/exploit.py)       |
| 17  | [poison_null_byte](./poison_null_byte/exploit.py)                                           |
| 18  | [overlapping_chunks](./overlapping_chunks/exploit.py)                                       |
| 19  | [large_bin_attack](./large_bin_attack/exploit.py)                                           |
| 20  | [large_bin_attack_again](./large_bin_attack_again/exploit.py)                               |
| 21  | [sysmalloc_int_free](./sysmalloc_int_free/exploit.py)                                       |
| 22  | [sysmalloc_int_free_again](./sysmalloc_int_free_again/exploit.py)                           |
| 23  | [house_of_spirit](./house_of_spirit/exploit.py)                                             |
| 24  | [house_of_einherjar](./house_of_einherjar/exploit.py)                                       |
| 25  | [house_of_force](./house_of_force/exploit.py)                                               |
| 26  | [house_of_lore](./house_of_lore/exploit.py)                                                 |
| 27  | [house_of_rabbit](./house_of_rabbit/exploit.py)                                             |
| 28  | [house_of_roman](./house_of_roman/exploit.py)                                               |
| 29  | [house_of_storm](./house_of_storm/exploit.py)                                               |
| 30  | [house_of_corrosion](./house_of_corrosion/exploit.py)                                       |
| 31  | [house_of_husk](./house_of_husk/exploit.py)                                                 |
| 32  | [house_of_husk_again](./house_of_husk_again/exploit.py)                                     |
| 33  | [house_of_atum](./house_of_atum/exploit.py)                                                 |
| 34  | [house_of_fun](./house_of_fun/exploit.py)                                                   |
| 35  | [house_of_mind_fastbin](./house_of_mind_fastbin/exploit.py)                                 |
| 36  | [house_of_botcake](./house_of_botcake/exploit.py)                                           |
| 37  | [tcache_stashing_unlink_attack_again](./tcache_stashing_unlink_attack_again/exploit.py)     |
| 38  | [tcache_stashing_unlink_attack_another](./tcache_stashing_unlink_attack_another/exploit.py) |
| 39  | [house_of_banana](./house_of_banana/exploit.py)                                             |
| 40  | [house_of_kiwi](./house_of_kiwi/exploit.py)                                                 |
| 41  | [house_of_emma](./house_of_emma/exploit.py)                                                 |
| 42  | [house_of_emma_again](./house_of_emma_again/exploit.py)                                     |
| 43  | [house_of_pig](./house_of_pig/exploit.py)                                                   |
| 44  | [house_of_pig_again](./house_of_pig_again/exploit.py)                                       |
| 45  | [house_of_obstack](./house_of_obstack/exploit.py)                                           |
| 46  | [house_of_apple_one](./house_of_apple_one/exploit.py)                                       |
| 47  | [house_of_apple_two](./house_of_apple_two/exploit.py)                                       |
| 48  | [house_of_apple_three](./house_of_apple_three/exploit.py)                                   |
| 49  | [house_of_apple_four](./house_of_apple_four/exploit.py)                                     |
| 50  | [house_of_apple_five](./house_of_apple_five/exploit.py)                                     |
| 51  | [house_of_apple_six](./house_of_apple_six/exploit.py)                                       |
| 52  | [house_of_apple_seven](./house_of_apple_seven/exploit.py)                                   |
| 53  | [house_of_apple_eight](./house_of_apple_eight/exploit.py)                                   |
| 54  | [house_of_tangerine](./house_of_tangerine/exploit.py)                                       |
| 55  | [house_of_lore_again](./house_of_lore_again/exploit.py)                                     |
