src/2.35/README.md
| No  | Heap Technique                                                                        |
| :-- | :------------------------------------------------------------------------------------ |
| 1   | [unsorted_bin_leak](./unsorted_bin_leak/exploit.py)                                   |
| 2   | [unsorted_bin_leak_again](./unsorted_bin_leak_again/exploit.py)                       |
| 3   | [unsafe_unlink](./unsafe_unlink/exploit.py)                                           |
| 4   | [unsafe_unlink_again](./unsafe_unlink_again/exploit.py)                               |
| 5   | [fast_bin_attack_bss](./fast_bin_attack_bss/exploit.py)                               |
| 6   | [tcache_poisoning](./tcache_poisoning/exploit.py)                                     |
| 7   | [tcache_poisoning_again](./tcache_poisoning_again/exploit.py)                         |
| 8   | [tcache_metadata_poisoning](./tcache_metadata_poisoning/exploit.py)                   |
| 9   | [tcache_stashing_unlink_attack](./tcache_stashing_unlink_attack/exploit.py)           |
| 10  | [tcache_stashing_unlink+\_attack](./tcache_stashing_unlink+_attack/exploit.py)        |
| 11  | [tcache_house_of_spirit](./tcache_house_of_spirit/exploit.py)                         |
| 12  | [fast_bin_reverse_into_tcache](./fast_bin_reverse_into_tcache/exploit.py)             |
| 13  | [fast_bin_reverse_into_tcache_again](./fast_bin_reverse_into_tcache_again/exploit.py) |
| 14  | [poison_null_byte](./poison_null_byte/exploit.py)                                     |
| 15  | [overlapping_chunks](./overlapping_chunks/exploit.py)                                 |
| 16  | [large_bin_attack](./large_bin_attack/exploit.py)                                     |
| 17  | [large_bin_attack_again](./large_bin_attack_again/exploit.py)                         |
| 18  | [sysmalloc_int_free](./sysmalloc_int_free/exploit.py)                                 |
| 19  | [sysmalloc_int_free_again](./sysmalloc_int_free_again/exploit.py)                     |
| 20  | [house_of_spirit](./house_of_spirit/exploit.py)                                       |
| 21  | [house_of_einherjar](./house_of_einherjar/exploit.py)                                 |
| 22  | [house_of_einherjar_again](./house_of_einherjar_again/exploit.py)                     |
| 23  | [house_of_einherjar_another](./house_of_einherjar_another/exploit.py)                 |
| 24  | [house_of_lore](./house_of_lore/exploit.py)                                           |
| 25  | [house_of_corrosion](./house_of_corrosion/exploit.py)                                 |
| 26  | [house_of_husk](./house_of_husk/exploit.py)                                           |
| 27  | [house_of_husk_again](./house_of_husk_again/exploit.py)                               |
| 28  | [house_of_mind_fastbin](./house_of_mind_fastbin/exploit.py)                           |
| 29  | [house_of_botcake](./house_of_botcake/exploit.py)                                     |
| 30  | [house_of_banana](./house_of_banana/exploit.py)                                       |
| 31  | [house_of_kiwi](./house_of_kiwi/exploit.py)                                           |
| 32  | [house_of_emma_one](./house_of_emma_one/exploit.py)                                   |
| 33  | [house_of_emma_two](./house_of_emma_two/exploit.py)                                   |
| 34  | [house_of_emma_three](./house_of_emma_three/exploit.py)                               |
| 35  | [house_of_emma_four](./house_of_emma_four/exploit.py)                                 |
| 36  | [house_of_obstack](./house_of_obstack/exploit.py)                                     |
| 37  | [house_of_apple_one](./house_of_apple_one/exploit.py)                                 |
| 38  | [house_of_apple_two](./house_of_apple_two/exploit.py)                                 |
| 39  | [house_of_apple_three](./house_of_apple_three/exploit.py)                             |
| 40  | [house_of_apple_four](./house_of_apple_four/exploit.py)                               |
| 41  | [house_of_apple_five](./house_of_apple_five/exploit.py)                               |
| 42  | [house_of_apple_six](./house_of_apple_six/exploit.py)                                 |
| 43  | [house_of_apple_seven](./house_of_apple_seven/exploit.py)                             |
| 44  | [house_of_apple_eight](./house_of_apple_eight/exploit.py)                             |
| 45  | [house_of_apple_nine](./house_of_apple_nine/exploit.py)                               |
| 46  | [house_of_io](./house_of_io/exploit.py)                                               |
